--- a/public/edit_user.html
+++ b/public/edit_user.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Edit User - Admin Panel</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-    />
-    <link rel="stylesheet" href="edit_user.css" />
+    <link rel="stylesheet" href="/css/all.min.css" type="text/css" />
+    <link rel="stylesheet" href="/css/edit_user.css" />
     <link rel="manifest" href="/manifest.json" />
-    <meta name="theme-color" content="#6A7B31" />
+    <meta name="theme-color" content="#0ea5e9" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="SPA PR" />
   </head>
   <body>
     <div class="container">
@@ -30,6 +30,11 @@
               <div class="field">
                 <label for="user-name">Nama Lengkap</label>
                 <input type="text" id="user-name" required />
+              </div>
+
+              <div class="field">
+                <label for="user-company">Company ID</label>
+                <input type="text" id="user-company" required />
               </div>
               <div class="field">
                 <label for="user-userid">User ID (untuk login)</label>
@@ -63,20 +68,7 @@
         </form>
       </div>
     </div>
-    <script src="edit_user.js"></script>
-    <script>
-      if ("serviceWorker" in navigator) {
-        window.addEventListener("load", () => {
-          navigator.serviceWorker
-            .register("/sw.js")
-            .then((registration) => {
-              console.log("Service Worker registered:", registration);
-            })
-            .catch((error) => {
-              console.log("Service Worker registration failed:", error);
-            });
-        });
-      }
-    </script>
+    <script src="/js/pwa.js"></script>
+    <script src="/js/edit_user.js"></script>
   </body>
 </html>
