--- a/public/print.html
+++ b/public/print.html
@@ -13,7 +13,10 @@
       }
     </style>
     <link rel="manifest" href="/manifest.json" />
-    <meta name="theme-color" content="#6A7B31" />
+    <meta name="theme-color" content="#0ea5e9" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="SPA PR" />
   </head>
   <body>
     <div class="container">
@@ -43,6 +46,7 @@
         <div class="small">Status: <span id="status"></span></div>
       </div>
     </div>
+    <script src="/js/pwa.js"></script>
     <script>
       async function load() {
         const url = new URL(location.href);
