--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -4,53 +4,71 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dashboard - Purchasing System</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-    />
-    <link rel="stylesheet" href="dashboard.css" />
+    <link rel="stylesheet" href="/css/all.min.css" type="text/css" />
+    <link rel="stylesheet" href="/css/dashboard.css" />
     <link rel="manifest" href="/manifest.json" />
-    <meta name="theme-color" content="#6A7B31" />
+    <meta name="theme-color" content="#0ea5e9" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="SPA PR" />
   </head>
   <body>
     <div class="container">
-      <div class="header">
-        <h1 id="welcome-message"></h1>
-        <button id="logout-btn" class="btn btn-secondary">Logout</button>
-      </div>
-      <h2>Menu Utama</h2>
-      <div class="menu-grid">
-        <a href="pr.html" class="menu-item" id="menu-pr">
-          <div class="menu-icon"><i class="fa-solid fa-file-pen"></i></div>
-          <div class="menu-title">Buat PR Baru</div>
-          <div class="menu-desc">Mengisi form permintaan.</div>
-        </a>
-        <a href="daftarpr.html" class="menu-item" id="menu-pr-list">
-          <div class="menu-icon"><i class="fa-solid fa-list-check"></i></div>
-          <div class="menu-title">Daftar PR</div>
-          <div class="menu-desc">Lihat semua permintaan Anda.</div>
-        </a>
-        <a href="admin.html" class="menu-item" id="menu-approval">
-          <div class="menu-icon"><i class="fa-solid fa-user-shield"></i></div>
-          <div class="menu-title">Panel Admin</div>
-          <div class="menu-desc">Persetujuan & Manajemen.</div>
-        </a>
-      </div>
+      <header class="header">
+        <h1>Menu Utama</h1>
+        <div class="header-actions">
+          <span id="user-info"></span>
+          <button id="logout-btn" class="btn btn-secondary">Logout</button>
+        </div>
+      </header>
+
+      <main>
+        <h2>Purchasing</h2>
+        <div class="menu-grid">
+          <a href="/pr.html" class="menu-item">
+            <div class="menu-icon"><i class="fa-solid fa-file-pen"></i></div>
+            <div class="menu-title">Buat PR Baru</div>
+            <div class="menu-desc">
+              Mengisi form permintaan pembelian barang.
+            </div>
+          </a>
+          <a href="/daftarpr.html" class="menu-item">
+            <div class="menu-icon"><i class="fa-solid fa-list-check"></i></div>
+            <div class="menu-title">Daftar PR</div>
+            <div class="menu-desc">
+              Lihat semua permintaan Anda dan statusnya.
+            </div>
+          </a>
+        </div>
+
+        <div id="admin-menu-section" class="hidden">
+          <h2 style="margin-top: 40px">Administrasi</h2>
+          <div class="menu-grid">
+            <a href="/laporanpr.html" class="menu-item">
+              <div class="menu-icon">
+                <i class="fa-solid fa-file-excel"></i>
+              </div>
+              <div class="menu-title">Laporan Purchasing</div>
+              <div class="menu-desc">Laporan PR</div>
+            </a>
+          </div>
+        </div>
+      </main>
     </div>
-    <script src="dashboard.js"></script>
-    <script>
-      if ("serviceWorker" in navigator) {
-        window.addEventListener("load", () => {
-          navigator.serviceWorker
-            .register("/sw.js")
-            .then((registration) => {
-              console.log("Service Worker registered:", registration);
-            })
-            .catch((error) => {
-              console.log("Service Worker registration failed:", error);
-            });
-        });
-      }
-    </script>
+    <script src="/js/pwa.js"></script>
+    <script src="/js/dashboard.js"></script>
   </body>
+  <footer
+    style="
+      position: fixed;
+      left: 0;
+      right: 0;
+      bottom: 12px;
+      text-align: center;
+      font: 500 12px/1.4 system-ui, Segoe UI, Roboto, Arial;
+      border: 0;
+    "
+  >
+    © by heronimuseri
+  </footer>
 </html>
