--- a/public/pr.html
+++ b/public/pr.html
@@ -2,207 +2,124 @@
 <html lang="id">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Form Permintaan Pembelian</title>
+    <title>Form Permintaan Pembelian - Sinar Permata Agro</title>
+    <link rel="stylesheet" href="/css/pr.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     />
-    <link rel="stylesheet" href="pr.css" />
+    />
     <link rel="manifest" href="/manifest.json" />
-    <meta name="theme-color" content="#6A7B31" />
+    <meta name="theme-color" content="#0ea5e9" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="SPA PR" />
   </head>
   <body>
     <div class="wrap screen-only">
-      <div class="card" style="max-width: 800px">
-        <div class="card-header"><h2>Form Permintaan Pembelian</h2></div>
+      <div class="card" style="max-width: 900px">
+        <div class="card-header">
+          <h2>
+            <i class="fa-solid fa-file-pen"></i> Form Permintaan Pembelian
+          </h2>
+        </div>
         <form id="prForm">
           <div class="card-content">
-            <div class="grid-3">
-              <div class="field">
-                <label for="pr-no">PR. No</label
-                ><input type="text" id="pr-no" readonly />
+            <!-- Informasi PR -->
+            <div class="form-section">
+              <h3><i class="fa-solid fa-info-circle"></i> Informasi PR</h3>
+              <div class="grid-3">
+                <div class="field">
+                  <label for="pr-no">
+                    <i class="fa-solid fa-hashtag"></i> PR.No
+                    <span class="field-hint">(Preview format)</span>
+                  </label>
+                  <input
+                    type="text"
+                    id="pr-no"
+                    readonly
+                    class="preview-field"
+                    placeholder="Format akan muncul setelah mengisi form"
+                  />
+                </div>
+                <div class="field">
+                  <label for="tanggal">
+                    <i class="fa-solid fa-calendar"></i> Tanggal *
+                  </label>
+                  <input type="date" id="tanggal" required />
+                </div>
+                <div class="field">
+                  <label for="departemen">
+                    <i class="fa-solid fa-building"></i> Departemen *
+                  </label>
+                  <select id="departemen" required>
+                    <option value="Estate" selected>Estate</option>
+                    <option value="Pabrik">HO</option>
+                  </select>
+                </div>
               </div>
+
               <div class="field">
-                <label for="tanggal">Tanggal</label
-                ><input type="date" id="tanggal" />
-              </div>
-              <div class="field">
-                <label for="departemen">Departemen</label
-                ><input type="text" id="departemen" />
+                <label for="keperluan">
+                  <i class="fa-solid fa-file-lines"></i> Untuk Kebutuhan /
+                  Uraian *
+                </label>
+                <textarea
+                  id="keperluan"
+                  rows="3"
+                  placeholder="Jelaskan secara detail untuk keperluan apa barang ini dibutuhkan..."
+                  required
+                ></textarea>
               </div>
             </div>
-            <div class="field">
-              <label for="keperluan">Untuk Kebutuhan / Uraian</label
-              ><textarea id="keperluan" rows="2"></textarea>
-            </div>
+
             <hr class="form-divider" />
-            <div class="table-header">
-              <h3>Detail Barang</h3>
-              <button type="button" class="btn btn-primary btn-sm" id="btn-add">
-                <i class="fa-solid fa-plus"></i> Tambah Barang
-              </button>
+
+            <!-- Detail Barang -->
+            <div class="form-section">
+              <div class="table-header">
+                <h3><i class="fa-solid fa-list-check"></i> Detail Barang</h3>
+                <button
+                  type="button"
+                  class="btn btn-primary btn-sm"
+                  id="btn-add"
+                >
+                  <i class="fa-solid fa-plus"></i> Tambah Barang
+                </button>
+              </div>
+
+              <div class="items-header grid-layout">
+                <div class="row-number-header">No</div>
+                <div>Nama & Spesifikasi Barang *</div>
+                <div>Quantity *</div>
+                <div>Satuan *</div>
+                <div>Aksi</div>
+              </div>
+
+              <div id="items-container" class="items-container">
+                <!-- Baris barang akan ditambahkan di sini secara dinamis -->
+              </div>
+
+              <div class="form-hint">
+                <i class="fa-solid fa-circle-info"></i>
+                Minimal 1 barang harus diisi. Klik "Tambah Barang" untuk
+                menambah baris baru.
+              </div>
             </div>
-            <div id="items-container"></div>
           </div>
+
           <div class="card-footer">
-            <button class="btn btn-primary" type="submit">
-              <i class="fa-solid fa-paper-plane"></i> Ajukan ke Server
+            <button class="btn btn-success" type="submit">
+              <i class="fa-solid fa-paper-plane"></i> Ajukan Untuk Disetujui
             </button>
-            <a href="dashboard.html" class="btn btn-secondary">Batal</a>
+            <a href="/dashboard.html" class="btn btn-secondary">
+              <i class="fa-solid fa-arrow-left"></i> Kembali ke Dashboard
+            </a>
           </div>
         </form>
       </div>
     </div>
-    <script>
-      // Skrip internal untuk pr.html
-      document.addEventListener("DOMContentLoaded", () => {
-        initializeForm();
-        document.getElementById("btn-add").addEventListener("click", addRow);
-        document
-          .getElementById("prForm")
-          .addEventListener("submit", submitToServer);
-        document
-          .getElementById("departemen")
-          .addEventListener("change", generatePRNumber);
-      });
-
-      function initializeForm() {
-        document.getElementById("tanggal").value = new Date()
-          .toISOString()
-          .slice(0, 10);
-        document.getElementById("departemen").value = "HO";
-        generatePRNumber();
-        addRow();
-      }
-
-      function generatePRNumber() {
-        let sequence =
-          parseInt(localStorage.getItem("pr_sequence_v1") || "0") + 1;
-        const paddedSequence = String(sequence).padStart(3, "0");
-        const dept =
-          document.getElementById("departemen").value.toUpperCase() || "DEPT";
-        const date = new Date();
-        const year = date.getFullYear();
-        const romanMonths = [
-          "I",
-          "II",
-          "III",
-          "IV",
-          "V",
-          "VI",
-          "VII",
-          "VIII",
-          "IX",
-          "X",
-          "XI",
-          "XII",
-        ];
-        document.getElementById(
-          "pr-no"
-        ).value = `${paddedSequence}/PR-SPA/${dept}/${
-          romanMonths[date.getMonth()]
-        }/${year}`;
-      }
-
-      function addRow() {
-        const container = document.getElementById("items-container");
-        const itemDiv = document.createElement("div");
-        itemDiv.className = "item-row";
-        itemDiv.innerHTML = `
-                <input type="text" name="material" placeholder="Nama & Spek Barang" required>
-                <input type="number" name="qty" placeholder="Qty" required min="1">
-                <select name="satuan">
-                    <option>Batang</option>
-                    <option>Botol</option>
-                    <option>Box</option>
-                    <option>Buah</option>
-                    <option>Bungkus</option>
-                    <option>Drum</option>
-                    <option>Ekor</option>
-                    <option>Galon</option>
-                    <option>Gram (Gr)</option>
-                    <option>Gross</option>
-                    <option>Kaleng</option>
-                    <option>Kilogram (Kg)</option>
-                    <option>Kodi</option>
-                    <option>Kuintal</option>
-                    <option>Lembar</option>
-                    <option>Liter (Ltr)</option>
-                    <option>Lusin</option>
-                    <option>Meter (m)</option>
-                    <option>Meter Persegi (m²)</option>
-                    <option>Mililiter (ml)</option>
-                    <option>Ons</option>
-                    <option>Pack</option>
-                    <option>Pasang</option>
-                    <option>Pcs</option>
-                    <option>Rim</option>
-                    <option>Roll</option>
-                    <option>Set</option>
-                    <option>Ton</option>
-                    <option>Unit</option>
-                    <option>Yard</option>
-</select>
-                <button type="button" class="btn btn-sm btn-danger" onclick="this.parentElement.remove()">Hapus</button>
-            `;
-        container.appendChild(itemDiv);
-      }
-
-      async function submitToServer(e) {
-        e.preventDefault();
-        const userName = localStorage.getItem("userName");
-        if (!userName) {
-          alert("Sesi tidak valid.");
-          return (window.location.href = "/Login.html");
-        }
-
-        const items = Array.from(document.querySelectorAll(".item-row"))
-          .map((row) => ({
-            material: row.querySelector('[name="material"]').value,
-            qty: row.querySelector('[name="qty"]').value,
-            satuan: row.querySelector('[name="satuan"]').value,
-          }))
-          .filter((item) => item.material && item.qty > 0);
-
-        if (items.length === 0)
-          return alert("Harap isi setidaknya satu baris barang.");
-
-        const payload = {
-          requester: userName,
-          items: items,
-          prNo: document.getElementById("pr-no").value,
-          tanggal: document.getElementById("tanggal").value,
-          keperluan: document.getElementById("keperluan").value,
-        };
-
-        const response = await fetch("/api/requests", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify(payload),
-        });
-        const result = await response.json();
-        alert(result.message);
-        if (result.success) {
-          localStorage.setItem(
-            "pr_sequence_v1",
-            parseInt(payload.prNo.split("/")[0])
-          );
-          window.location.href = "/dashboard.html";
-        }
-      }
-      if ("serviceWorker" in navigator) {
-        window.addEventListener("load", () => {
-          navigator.serviceWorker
-            .register("/sw.js")
-            .then((registration) => {
-              console.log("Service Worker registered:", registration);
-            })
-            .catch((error) => {
-              console.log("Service Worker registration failed:", error);
-            });
-        });
-      }
-    </script>
+    <script src="/js/pwa.js"></script>
+    <script src="/js/pr.js" defer></script>
   </body>
 </html>
