Add Database Management, Master Vendor with Excel sync, and various fixes

--- a/public/Login.html
+++ b/public/Login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Purchasing Login</title>
     <link rel="manifest" href="/manifest.json" />
-    <meta name="theme-color" content="#6a7b31" />
+    <meta name="theme-color" content="#0ea5e9" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="apple-mobile-web-app-title" content="SPA PR" />
