--- a/public/admin.html
+++ b/public/admin.html
@@ -403,6 +403,33 @@
             <div id="db-notification" class="notification" style="margin-top: 15px;"></div>
           </div>
 
+          <!-- Backup & Restore Section (New) -->
+          <div class="card">
+            <h2><i class="fa-solid fa-cloud-upload-alt"></i> Migrasi & Restore Database</h2>
+            <div
+              style="background: #fff3cd; padding: 15px; border-radius: 8px; margin-bottom: 20px; border-left: 5px solid #ffc107;">
+              <strong><i class="fa-solid fa-exclamation-triangle"></i> PERHATIAN PENTING:</strong>
+              <p style="margin: 5px 0;">Fitur ini akan <strong>MENIMPA/MENGGABUNGKAN</strong> data database saat ini
+                dengan data dari file backup.</p>
+              <ul style="margin: 5px 0 0 20px; font-size: 13px;">
+                <li>Gunakan file <code>full_backup.json</code> yang dihasilkan dari script export.</li>
+                <li>Proses ini tidak bisa dibatalkan.</li>
+                <li>Hanya tabel: Users, Vendors, Purchase Requests, PR Items yang akan diproses.</li>
+              </ul>
+            </div>
+
+            <div class="form-group">
+              <label>Upload File Backup (JSON)</label>
+              <input type="file" id="db-backup-file" accept=".json" class="form-control"
+                style="padding: 10px; border: 2px dashed #bdc3c7; width: 100%;">
+            </div>
+
+            <button id="btn-restore-db" class="btn btn-danger" style="width: 100%; margin-top: 10px;" disabled>
+              <i class="fa-solid fa-upload"></i> Restore Database dari JSON
+            </button>
+            <div id="restore-status" style="margin-top: 10px; font-weight: bold;"></div>
+          </div>
+
           <!-- Config Section -->
           <div class="card">
             <h2><i class="fa-solid fa-cog"></i> Konfigurasi Database</h2>
