Add company field and fix user form IDs

--- a/public/admin.html
+++ b/public/admin.html
@@ -78,6 +78,11 @@
                   </div>
 
                   <div class="form-group">
+                    <label for="user-company">Perusahaan (Company ID)</label>
+                    <input type="text" id="user-company" required placeholder="Contoh: PT SPA" />
+                  </div>
+
+                  <div class="form-group">
                     <label for="user-username">Username</label>
                     <input type="text" id="user-username" required placeholder="Masukkan username user" />
                   </div>
