Restrict company selection to SPA_70, SNA_70, PT SPA

--- a/public/admin.html
+++ b/public/admin.html
@@ -79,7 +79,12 @@
 
                   <div class="form-group">
                     <label for="user-company">Perusahaan (Company ID)</label>
-                    <input type="text" id="user-company" required placeholder="Contoh: PT SPA" />
+                    <select id="user-company" required>
+                      <option value="">Pilih Perusahaan</option>
+                      <option value="SPA_70">SPA_70</option>
+                      <option value="SNA_70">SNA_70</option>
+                      <option value="PT SPA">PT SPA</option>
+                    </select>
                   </div>
 
                   <div class="form-group">
