remove logout button from daftarpr page

--- a/public/login.html
+++ b/public/login.html
@@ -253,15 +253,15 @@
             <label for="company">
               <i class="fas fa-building"></i> Company ID
             </label>
-            <input id="company" type="text" value="SPA_70" required />
+            <input id="company" type="text" value="SPA_70" required autocomplete="organization" />
           </div>
           <div class="field">
             <label for="user"> <i class="fas fa-user"></i> User ID </label>
-            <input id="user" type="text" required />
+            <input id="user" type="text" required autocomplete="username" />
           </div>
           <div class="field">
             <label for="password"> <i class="fas fa-lock"></i> Password </label>
-            <input id="password" type="password" required />
+            <input id="password" type="password" required autocomplete="current-password" />
           </div>
           <div class="actions">
             <button class="btn btn-primary" type="submit">
