feat: implement global whatsapp notification toggle setting

--- a/public/admin.html
+++ b/public/admin.html
@@ -146,6 +146,19 @@
                 </form>
                 <div id="group-wa-notification" class="notification"></div>
               </div>
+
+              <!-- Konfigurasi Notifikasi Umum -->
+              <div class="card">
+                <h2>Pengaturan Notifikasi</h2>
+                <p>Aktifkan atau nonaktifkan pengiriman notifikasi WhatsApp secara global.</p>
+                <div class="form-group" style="display: flex; align-items: center; gap: 10px;">
+                  <label class="switch">
+                    <input type="checkbox" id="toggle-wa-notifications">
+                    <span class="slider round"></span>
+                  </label>
+                  <span id="wa-notification-status-text">Notifikasi Aktif</span>
+                </div>
+              </div>
             </div>
 
             <div class="user-list-wrapper">
