chore: add cache busting query params to assets

--- a/public/daftarpr.html
+++ b/public/daftarpr.html
@@ -7,7 +7,7 @@
   <title>Daftar Purchase Request - Sinar Permata Agro</title>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-  <link rel="stylesheet" href="/css/daftarpr.css" />
+  <link rel="stylesheet" href="/css/daftarpr.css?v=1.0.2" />
 
   <link rel="manifest" href="/manifest.json" />
   <meta name="theme-color" content="#0ea5e9" />
@@ -142,9 +142,9 @@
     </div>
   </div>
 
-  <script src="/js/print_pr.js"></script>
-  <script src="/js/daftarpr_main.js"></script>
-  <script src="/js/pwa.js"></script>
+  <script src="/js/print_pr.js?v=1.0.2"></script>
+  <script src="/js/daftarpr_main.js?v=1.0.2"></script>
+  <script src="/js/pwa.js?v=1.0.2"></script>
 </body>
 
 </html>
