--- a/public/admin.html
+++ b/public/admin.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Admin Panel - Purchasing System</title>
   <link rel="stylesheet" href="/css/all.min.css" type="text/css" />
-  <link rel="stylesheet" href="/css/admin.css" />
+  <link rel="stylesheet" href="/css/admin.css?v=1.0.2" />
   <link rel="manifest" href="/manifest.json">
   <meta name="theme-color" content="#0ea5e9">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -514,8 +514,8 @@
   </div>
 
   <script src="/js/xlsx.full.min.js"></script>
-  <script src="/js/pwa.js"></script>
-  <script src="/js/admin.js"></script>
+  <script src="/js/pwa.js?v=1.0.2"></script>
+  <script src="/js/admin.js?v=1.0.2"></script>
   <script>
     if ("serviceWorker" in navigator) {
       window.addEventListener("load", () => {
