--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -27,7 +27,7 @@
     <main>
       <h2>Purchasing</h2>
       <div class="menu-grid">
-        <a href="/pr.html" class="menu-item">
+        <a href="/pr.html" class="menu-item" id="create-pr-link">
           <div class="menu-icon"><i class="fa-solid fa-file-pen"></i></div>
           <div class="menu-title">Buat PR Baru</div>
           <div class="menu-desc">
@@ -42,6 +42,38 @@
             Lihat semua permintaan Anda dan statusnya.
           </div>
         </a>
+      </div>
+
+      <!-- Summary Section for KTU/Manager -->
+      <div id="ktu-manager-summary" class="hidden" style="margin-top: 30px;">
+        <h2>Rangkuman Analisa PR</h2>
+        <div class="menu-grid" style="grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));">
+          <div class="menu-item" style="cursor: default;">
+            <div class="menu-icon" style="color: #64748b;"><i class="fa-solid fa-file-invoice"></i></div>
+            <div class="menu-title" id="summary-total">0</div>
+            <div class="menu-desc">Total PR Masuk</div>
+          </div>
+          <div class="menu-item" style="cursor: default;">
+            <div class="menu-icon" style="color: #f59e0b;"><i class="fa-solid fa-clock"></i></div>
+            <div class="menu-title" id="summary-pending-ktu">0</div>
+            <div class="menu-desc">Pending KTU</div>
+          </div>
+          <div class="menu-item" style="cursor: default;">
+            <div class="menu-icon" style="color: #3b82f6;"><i class="fa-solid fa-user-tie"></i></div>
+            <div class="menu-title" id="summary-pending-manager">0</div>
+            <div class="menu-desc">Pending Manager</div>
+          </div>
+          <div class="menu-item" style="cursor: default;">
+            <div class="menu-icon" style="color: #10b981;"><i class="fa-solid fa-check-circle"></i></div>
+            <div class="menu-title" id="summary-approved">0</div>
+            <div class="menu-desc">Fully Approved</div>
+          </div>
+          <div class="menu-item" style="cursor: default;">
+            <div class="menu-icon" style="color: #ef4444;"><i class="fa-solid fa-times-circle"></i></div>
+            <div class="menu-title" id="summary-rejected">0</div>
+            <div class="menu-desc">Rejected</div>
+          </div>
+        </div>
       </div>
 
       <div id="admin-menu-section" class="hidden">
