--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -44,6 +44,18 @@
         </a>
       </div>
 
+      <!-- PO (Purchase Order) Section -->
+      <h2 style="margin-top: 30px;">Purchase Order</h2>
+      <div class="menu-grid">
+        <a href="/daftarpo.html" class="menu-item">
+          <div class="menu-icon"><i class="fa-solid fa-file-invoice-dollar"></i></div>
+          <div class="menu-title">Purchase Order (PO)</div>
+          <div class="menu-desc">
+            Buat dan kelola Purchase Order ke Vendor.
+          </div>
+        </a>
+      </div>
+
       <!-- Summary Section for KTU/Manager -->
       <div id="ktu-manager-summary" class="hidden" style="margin-top: 30px;">
         <h2>Rangkuman Analisa PR</h2>
