feat: add admin panel page with user, vendor, and material management sections.

--- a/public/admin.html
+++ b/public/admin.html
@@ -106,6 +106,9 @@
                       <option value="kerani">kerani</option>
                       <option value="ktu">ktu</option>
                       <option value="manager">manager</option>
+                      <option value="purchasing">purchasing</option>
+                      <option value="manager_ho">manager_ho</option>
+                      <option value="direktur">direktur</option>
                       <option value="admin">admin</option>
                     </select>
                   </div>
