feat(invoice): implement invoice module, migration scripts, and updated config

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -58,6 +58,20 @@
           </a>
         </div>
       </div>
+      <!-- Finance / Invoice Section -->
+      <div id="finance-section" class="hidden">
+        <h2 style="margin-top: 30px;">Keuangan</h2>
+        <div class="menu-grid">
+          <a href="/daftar_tagihan.html" class="menu-item">
+            <span id="invoice-badge" class="dashboard-badge" style="display: none;">0</span>
+            <div class="menu-icon"><i class="fa-solid fa-file-invoice"></i></div>
+            <div class="menu-title">Pembayaran Tagihan</div>
+            <div class="menu-desc">
+              Kelola tagihan invoice dan approval pembayaran.
+            </div>
+          </a>
+        </div>
+      </div>
 
       <!-- Summary Section for KTU/Manager -->
       <div id="ktu-manager-summary" class="hidden" style="margin-top: 30px;">
