--- a/public/daftarpo.html
+++ b/public/daftarpo.html
@@ -25,6 +25,8 @@
                     <i class="fa-solid fa-bell"></i>
                     <span id="notification-badge" class="notification-badge" style="display: none">0</span>
                 </div>
+                <a href="/daftar_tagihan.html" class="btn btn-secondary" style="margin-right: 5px;"><i
+                        class="fa-solid fa-file-invoice"></i> Tagihan</a>
                 <a href="/dashboard.html" class="btn btn-secondary"><i class="fa-solid fa-arrow-left"></i> Dashboard</a>
             </div>
         </div>
